# forma

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  TODO.md  prompts.yaml  pyproject.toml  requirements.txt  外部解析引擎技术分析.md
demos/: README.md  advanced_ocr_demo.py  aliyun_ocr_demo.py  ocr_demo.py  pdf_processor_demo.py
docs/: Forma 数据处理与运营操作手册.md  TODO.md  convert-by-content-api.md  convert-by-content-implementation-summary.md  pptx_processing_pipeline.md  qa-v2_层级提炼与摘要回填评估.md  接口说明.md  系统架构设计说明书.md
examples/: batch_pdf_folder.py  image_to_md.py  pdf_to_md.py  process_folder.py
ouput/: AI短视频工厂项目可行性与技术方案研究.md  营业执照.md
scripts/: image_vision_test.py
src/forma/: __main__.py  cli.py  config.py  controller.py  custom_types.py  server.py
src/forma/conversion/: __init__.py  workflow.py
src/forma/conversion/processors/: __init__.py  base.py  batch_processor.py  docx.py  image.py  pdf.py  pdf_marker.py  pptx.py  text.py  xlsx.py
src/forma/core/: __init__.py  chunker.py  knowledge_builder.py  models.py  ocr.py  parser.py  processors.py  prompt_manager.py  qa_generator.py  schemas.py  vlm.py
src/forma/core/processors/: docx.py  image.py  pdf.py  pptx.py
src/forma/ocr/: __init__.py  client.py  engine.py
src/forma/qa/: __init__.py  builder.py  builder_v2.py  pipeline.py  pipeline_v2.py
src/forma/shared/: __init__.py  chunker.py  chunker_v2.py  config.py  models.py  prompts.py
src/forma/shared/utils/: __init__.py  converters.py  docx.py  file_handler.py  markdown_cleaner.py  retry.py  timeout.py
src/forma/utils/: converters.py  device.py  docx.py
src/forma/vision/: __init__.py  client.py  parser.py
src/forma/workflows/: conversion.py  knowledge_pipeline.py  qa_pipeline.py
tests/: run_hierarchical_builder_v2_demo.py  test_bold_headers_chunking.py  test_bold_headers_simple.py  test_hierarchical_builder_v2.py  test_hierarchical_chunker_v2.py  test_markdown_cleaner.py  test_ocr_image.py  test_optimized_builder_v2.py  test_parse_pdf.py  test_pptx_processor.py  test_smoke.py  test_xlsx_processor.py
tools/: download_st_model.py
