[project]
name = "forma"
version = "0.1.0"
description = "Python project bootstrapped by pyenv + uv"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Jayleonc", email = "jayleonc@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "pre-commit>=3.7.0",
  "ipython>=8.0.0",
]
